<resources>
    <string name="app_name">RedRockClassDemo</string>
    <string name="material_design">Material Design</string>
    <string name="res">res</string>
    <string name="night_adapt">黑夜模式适配</string>
    <string name="viewpager">ViewPager</string>
    <string name="tablayout">TabLayout</string>
    <string name="recyclerview">RecyclerView</string>


    <string name="textview">我是一个TextView</string>
    <string name="login">登 录</string>
    <string name="tv_night_adapt">红岩网校工作站</string>
    <string name="viewpager_amp_fragment"><![CDATA[ViewPager&Fragment]]></string>
</resources>