<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <Button
        android:id="@+id/btn_res"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textAllCaps="false"
        android:text="@string/res" />

    <Button
        android:id="@+id/btn_night_adapt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textAllCaps="false"
        android:text="@string/night_adapt" />

    <Button
        android:id="@+id/btn_md"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textAllCaps="false"
        android:text="@string/material_design" />

    <Button
        android:id="@+id/btn_vp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textAllCaps="false"
        android:text="@string/viewpager" />


    <Button
        android:id="@+id/btn_vp2_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textAllCaps="false"
        android:text="@string/viewpager_amp_fragment" />

    <Button
        android:id="@+id/btn_ty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textAllCaps="false"
        android:text="@string/tablayout" />


    <Button
        android:id="@+id/btn_rv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textAllCaps="false"
        android:text="@string/recyclerview" />

</LinearLayout>